--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,17 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <% if user_signed_in? %>
+      <p>こんにちは, <%= link_to current_user.email %></p>
+      <%= link_to "プロファイル編集", edit_user_registration_path, :class => 'navbar-link' %>
+      <%= link_to "サインアウト", destroy_user_session_path, method: :delete,  :class => 'navbar-link' %>&nbsp|&nbsp
+    <% else %>
+      <%= link_to "ホーム", '/', :class => 'navbar-link' %>
+      <%= link_to "サインイン", new_user_session_path, :class => 'navbar-link' %>
+      <%= link_to "ユーザ登録", new_user_registration_path, :class => 'navbar-link' %>
+    <% end %>
+
+<hr>
   </head>
 
   <body>
