--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     <% if user_signed_in? %>
-      <p>こんにちは, <%= link_to current_user.email %></p>
+      <p>こんにちは, <%= link_to current_user.email, users_show_path %></p>
       <%= link_to "プロファイル編集", edit_user_registration_path, :class => 'navbar-link' %>
       <%= link_to "サインアウト", destroy_user_session_path, method: :delete,  :class => 'navbar-link' %>&nbsp|&nbsp
     <% else %>
