--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -24,7 +24,7 @@
   <div class="field">
     <%= form.label :detail %>
     <%= form.text_area :detail %>
-  </div>
+  </div
   
   <div class="field">
      <%= form.label :image %>
