--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -31,6 +31,13 @@
     <%= form.submit %>
   </div>
 <% end %>
+<h2>Review List</h2>
+     <ul>
+       <% @book.book_review.each do |book_review|%>
+        <li><%= book_review.review %>
+          (<b><%= book_review.user_id %></b>)</li>
+     <% end %>
+     </ul>
 
 
 <%= link_to 'Edit', edit_book_path(@book) %> |
